--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <body>
         <h1>Hello and Welcome</h1>
         <p>You will be amazed at what happens on this website</p>
+        <p>Bit poos</p>
     </body>
 </html>
