--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>This is Dan's Webstie</title>
+        <body>
+            <h1>This is the original file</h1>
+        </body>
     </head>
-    <body>
-        <h1>Hello and Welcome</h1>
-        <p>You will be amazed at what happens on this website</p>
-        <p>Bit poos</p>
-    </body>
 </html>
