added test line

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <body>
             <h1>This is the original file</h1>
+            <p>This is an extra addition</p>
         </body>
     </head>
 </html>
