another line added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <body>
             <h1>This is the original file</h1>
             <p>This is an extra addition</p>
+            <p>test 2</p>
         </body>
     </head>
 </html>
