--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
             <h1>This is the original file</h1>
             <p>This is an extra addition</p>
             <p>test 2</p>
+            <p>test 3</p>
         </body>
     </head>
 </html>
